// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[POKEMON-DETAILS] should render Pokemon Details 1`] = `
<DocumentFragment>
  <div
    class="pokemon-details-container"
    id="pokedex-pokemon-details"
  >
    <div
      class="pokemon-details-card"
    >
      <a
        href="/"
      >
        <svg
          color="#373E59"
          fill="none"
          height="30"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="color: rgb(55, 62, 89);"
          viewBox="0 0 24 24"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="19"
            x2="5"
            y1="12"
            y2="12"
          />
          <polyline
            points="12 19 5 12 12 5"
          />
        </svg>
      </a>
      <div
        class="pokemon-details-favorite"
      >
        <p
          class="pokemon-details-name"
        >
          bulbasaur
        </p>
        <div
          id="pokedex-pokemon-details__favorite"
        >
          <svg
            color="#373E59"
            fill="currentColor"
            height="30"
            stroke="currentColor"
            stroke-width="0"
            style="color: rgb(55, 62, 89);"
            viewBox="0 0 24 24"
            width="30"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M14.5 12a2.5 2.5 0 01-5 0 2.5 2.5 0 015 0zm7.5 0c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zm-2 0h-4c0-2.21-1.79-4-4-4s-4 1.79-4 4H4c0 4.41 3.59 8 8 8s8-3.59 8-8z"
            />
          </svg>
        </div>
      </div>
      <div
        class="pokemon-details-about"
      >
        <div>
          <div
            class="pokemon"
            id="pokedex-pokemon"
          >
            <img
              alt="bulbasaur"
              class="pokemon-avatar"
              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
            />
            <div
              class="pokemon__infos"
            >
              <p
                class="pokemon__name"
              >
                bulbasaur
              </p>
              <p
                class="pokemon__number"
              >
                #1
              </p>
            </div>
            <div
              class="pokemon__infos"
            >
              <p>
                6.9 kg
              </p>
              <p>
                0.7 m
              </p>
            </div>
          </div>
          <div
            class="pokemon-details-type"
          >
            Types:
            <p
              class="pokemon-details-type__item"
              id="pokemon-details-type"
              style="background-color: rgb(122, 199, 76);"
            >
              grass
            </p>
            <p
              class="pokemon-details-type__item"
              id="pokemon-details-type"
              style="background-color: rgb(163, 62, 161);"
            >
              poison
            </p>
          </div>
          <div
            class="pokemon-details-abilities"
          >
            Abilities:
            <p
              class="pokemon-details-abilities__item"
            >
              overgrow
            </p>
            <p
              class="pokemon-details-abilities__item"
            >
              chlorophyll
            </p>
          </div>
        </div>
        <div
          class="pokemon-details-stats"
        >
          <div
            class="pokemon-details-stats__item"
          >
            hp
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 48%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                48
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            attack
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 49%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                49
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            defense
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 49%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                49
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            special-attack
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 65%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                65
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            special-defense
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 65%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                65
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            speed
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 45%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                45
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[POKEMON-DETAILS] should render Pokemon and click to favorite 1`] = `
<DocumentFragment>
  <div
    class="pokemon-details-container"
    id="pokedex-pokemon-details"
  >
    <div
      class="pokemon-details-card"
    >
      <a
        href="/"
      >
        <svg
          color="#373E59"
          fill="none"
          height="30"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="color: rgb(55, 62, 89);"
          viewBox="0 0 24 24"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="19"
            x2="5"
            y1="12"
            y2="12"
          />
          <polyline
            points="12 19 5 12 12 5"
          />
        </svg>
      </a>
      <div
        class="pokemon-details-favorite"
      >
        <p
          class="pokemon-details-name"
        >
          bulbasaur
        </p>
        <div
          id="pokedex-pokemon-details__favorite"
        >
          <svg
            color="#C22E28"
            fill="currentColor"
            height="30"
            stroke="currentColor"
            stroke-width="0"
            style="color: rgb(194, 46, 40);"
            viewBox="0 0 24 24"
            width="30"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M14.5 12a2.5 2.5 0 01-5 0 2.5 2.5 0 015 0zm7.5 0c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zm-2 0h-4c0-2.21-1.79-4-4-4s-4 1.79-4 4H4c0 4.41 3.59 8 8 8s8-3.59 8-8z"
            />
          </svg>
        </div>
      </div>
      <div
        class="pokemon-details-about"
      >
        <div>
          <div
            class="pokemon"
            id="pokedex-pokemon"
          >
            <img
              alt="bulbasaur"
              class="pokemon-avatar"
              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
            />
            <div
              class="pokemon__infos"
            >
              <p
                class="pokemon__name"
              >
                bulbasaur
              </p>
              <p
                class="pokemon__number"
              >
                #1
              </p>
            </div>
            <div
              class="pokemon__infos"
            >
              <p>
                6.9 kg
              </p>
              <p>
                0.7 m
              </p>
            </div>
          </div>
          <div
            class="pokemon-details-type"
          >
            Types:
            <p
              class="pokemon-details-type__item"
              id="pokemon-details-type"
              style="background-color: rgb(122, 199, 76);"
            >
              grass
            </p>
            <p
              class="pokemon-details-type__item"
              id="pokemon-details-type"
              style="background-color: rgb(163, 62, 161);"
            >
              poison
            </p>
          </div>
          <div
            class="pokemon-details-abilities"
          >
            Abilities:
            <p
              class="pokemon-details-abilities__item"
            >
              overgrow
            </p>
            <p
              class="pokemon-details-abilities__item"
            >
              chlorophyll
            </p>
          </div>
        </div>
        <div
          class="pokemon-details-stats"
        >
          <div
            class="pokemon-details-stats__item"
          >
            hp
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 48%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                48
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            attack
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 49%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                49
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            defense
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 49%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                49
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            special-attack
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 65%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                65
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            special-defense
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 65%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                65
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            speed
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 45%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                45
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[POKEMON-DETAILS] should render Pokemon and click to remove favorite 1`] = `
<DocumentFragment>
  <div
    class="pokemon-details-container"
    id="pokedex-pokemon-details"
  >
    <div
      class="pokemon-details-card"
    >
      <a
        href="/"
      >
        <svg
          color="#373E59"
          fill="none"
          height="30"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="color: rgb(55, 62, 89);"
          viewBox="0 0 24 24"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="19"
            x2="5"
            y1="12"
            y2="12"
          />
          <polyline
            points="12 19 5 12 12 5"
          />
        </svg>
      </a>
      <div
        class="pokemon-details-favorite"
      >
        <p
          class="pokemon-details-name"
        >
          bulbasaur
        </p>
        <div
          id="pokedex-pokemon-details__favorite"
        >
          <svg
            color="#C22E28"
            fill="currentColor"
            height="30"
            stroke="currentColor"
            stroke-width="0"
            style="color: rgb(194, 46, 40);"
            viewBox="0 0 24 24"
            width="30"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M14.5 12a2.5 2.5 0 01-5 0 2.5 2.5 0 015 0zm7.5 0c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zm-2 0h-4c0-2.21-1.79-4-4-4s-4 1.79-4 4H4c0 4.41 3.59 8 8 8s8-3.59 8-8z"
            />
          </svg>
        </div>
      </div>
      <div
        class="pokemon-details-about"
      >
        <div>
          <div
            class="pokemon"
            id="pokedex-pokemon"
          >
            <img
              alt="bulbasaur"
              class="pokemon-avatar"
              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
            />
            <div
              class="pokemon__infos"
            >
              <p
                class="pokemon__name"
              >
                bulbasaur
              </p>
              <p
                class="pokemon__number"
              >
                #1
              </p>
            </div>
            <div
              class="pokemon__infos"
            >
              <p>
                6.9 kg
              </p>
              <p>
                0.7 m
              </p>
            </div>
          </div>
          <div
            class="pokemon-details-type"
          >
            Types:
            <p
              class="pokemon-details-type__item"
              id="pokemon-details-type"
              style="background-color: rgb(122, 199, 76);"
            >
              grass
            </p>
            <p
              class="pokemon-details-type__item"
              id="pokemon-details-type"
              style="background-color: rgb(163, 62, 161);"
            >
              poison
            </p>
          </div>
          <div
            class="pokemon-details-abilities"
          >
            Abilities:
            <p
              class="pokemon-details-abilities__item"
            >
              overgrow
            </p>
            <p
              class="pokemon-details-abilities__item"
            >
              chlorophyll
            </p>
          </div>
        </div>
        <div
          class="pokemon-details-stats"
        >
          <div
            class="pokemon-details-stats__item"
          >
            hp
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 48%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                48
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            attack
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 49%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                49
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            defense
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 49%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                49
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            special-attack
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 65%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                65
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            special-defense
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 65%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                65
              </span>
            </div>
          </div>
          <div
            class="pokemon-details-stats__item"
          >
            speed
            <div
              class="progress-bar"
              id="pokedex-progress-bar"
            >
              <div
                class="progress-bar__container"
              >
                <div
                  class="progress-bar__filler"
                  style="width: 45%;"
                />
              </div>
              <span
                class="progress-bar__label"
              >
                45
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
